--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">GankDBinding</string>
   <string name="please_wait">正在加载...</string>
   <string name="press_again_exit">再按一次退出</string>
+  <string name="点我">click</string>
 </resources>
